--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-                <data android:scheme="login" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.Main2Activity"></activity>
     </application>
 
 </manifest>
